moved things into services, had some scope issues

--- a/app/index.html
+++ b/app/index.html
@@ -74,6 +74,9 @@
         <script src="scripts/services/itemCollectionFactory.js"></script>
         <script src="scripts/services/shuffler.js"></script>
         <script src="scripts/services/guid.js"></script>
+        <script src="scripts/services/rotator.js"></script>
+        <script src="scripts/services/draggerFactory.js"></script>
+        <script src="scripts/services/safeApply.js"></script>
         <!-- endbuild -->
 
         <script src="scripts/controllers/yojimboTest.js"></script>
