have to move implementation to another repo

--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
 
     <!-- Add your site or application content here -->
 
-    <div class="container yoj-full-height yoj-full-width" ng-include src="'views/yojimboTestOny.html'">
+    <div class="container yoj-full-height yoj-full-width" ng-include src="'views/yojimboTestArisella.html'">
         
     </div>
 
@@ -85,6 +85,7 @@
         </script>
         <script src="scripts/controllers/yojimboTestMag.js"></script>
         <script src="scripts/controllers/yojimboTestOny.js"></script>
+        <script src="scripts/controllers/yojimboTestArisella.js"></script>
 
 </body>
 </html>
